# ucn_depolarization

./: CMakeLists.txt  gsl_trial.cpp  guillaume_code.py  runjobs.sh  single_job.sh  status.sh  test_data.txt
cmake_modules/: CMinpackConfig.cmake  ROOTConfig.cmake
data/: g10_data.txt  g10_quartz_data.txt  g11_data.txt  g11_quartz_data.txt  g1m1_data.txt  g1m1_quartz_data.txt  g20_data.txt  g20_quartz_data.txt
